--- a/src/app/listmateriel/listmateriel.component.html
+++ b/src/app/listmateriel/listmateriel.component.html
@@ -1,8 +1,10 @@
-<h1>nos produits en informatique </h1>
-<ul>
+<h1 class="text-center">nos produits en informatique </h1>
+<div class="container">
+  <div class="row">
     <ng-container *ngFor="let elem of materiels">
-      <li *ngIf="elem.quantite > 0">
+      <div *ngIf="elem.quantite > 0" class="col-4 pt-4">
         <ihe-materiel [e]=elem></ihe-materiel>
-      </li>
+      </div>
     </ng-container>
-</ul>
+  </div>
+</div>
