--- a/src/app/composants/accueil/commentaires/comment/comment.component.html
+++ b/src/app/composants/accueil/commentaires/comment/comment.component.html
@@ -1,6 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item">    contenu {{com.contenu}}</li>
-    <li class="list-group-item">    note : <span class="badge badge-pill badge-primary">{{com.note}} </span></li>
-    <li class="list-group-item">    nom : {{com.auteur}}</li>
-    <li class="list-group-item">    date : {{com.date}}</li>
+    <li class="list-group-item">    commentaire n° {{index + 1}} : {{com.contenu}}</li>
+    <li class="list-group-item">    {{com.auteur}} <span class="badge badge-pill badge-primary">{{com.note}} </span></li>
+    <li class="list-group-item">    {{com.date}}</li>
 </ul>
