Ajout d’un service

--- a/src/app/composants/accueil/informatique/detailmateriel/detailmateriel.component.html
+++ b/src/app/composants/accueil/informatique/detailmateriel/detailmateriel.component.html
@@ -8,7 +8,7 @@
                 <li class="list-group-item"> prix {{det.prix}} </li>
                 <li class="list-group-item"> description {{det.description}}</li>
                 <li class="list-group-item"> quantite {{det.quantite}}</li>
-                <li class="list-group-item"> <input type="checkbox" [checked] ="det.hautGamme"> hout de gamme </li>
+                <li class="list-group-item"> <input type="checkbox" [checked] ="det.hautGamme"> haut de gamme </li>
                 <button class="btn btn-primary" (click)="onshow()"> afficher les commentaires</button>   
             </div>  
      
