--- a/src/app/composants/accueil/informatique/listmateriel/listmateriel.component.html
+++ b/src/app/composants/accueil/informatique/listmateriel/listmateriel.component.html
@@ -1,7 +1,7 @@
 <h1 class="text-center">nos produits en informatique </h1>
 <div class="container">
   <div class="row">
-    <ng-container *ngFor="let elem of materiels">
+    <ng-container *ngFor="let elem of lesMateriel">
       <div *ngIf="elem.quantite > 0" class="col-4 pt-4">
         <ihe-materiel [e]=elem></ihe-materiel>
       </div>
