--- a/src/app/composants/accueil/informatique/detailmateriel/detailmateriel.component.html
+++ b/src/app/composants/accueil/informatique/detailmateriel/detailmateriel.component.html
@@ -1,15 +1,16 @@
-<h1 class="c1"> Detail de {{det.libelle}} {{det.id}}</h1>
-<ul class="list-group"> 
-   <div class="container">
+<h1 class="c1"> Detail de {{det.libelle}}</h1>
+<div class="container">
+<ul class="list-group">
        <div class="row">
-            <div class="col-4">
+            <div class="col-6">
                 <li class="list-group-item"> <img [src]="det.photo"></li>
                 <li class="list-group-item"> marque {{det.marque}} </li>
                 <li class="list-group-item"> prix {{det.prix}} </li>
                 <li class="list-group-item"> description {{det.description}}</li>
                 <li class="list-group-item"> quantite {{det.quantite}}</li>
-                <li class="list-group-item"> <input type="checkbox" [checked] ="det.hautGamme"> haut de gamme </li>
+                <li class="list-group-item"> <input type="checkbox" [checked] ="det.hautGamme"> hout de gamme </li>
                 <button class="btn btn-primary" (click)="onshow()"> afficher les commentaires</button>   
+            <button (click)="onRetour()" class="btn btn-success">Retour</button>
             </div>  
      
             <div *ngIf="!showing">
@@ -22,6 +23,6 @@
                     </ng-container>
             </div>
        </div>
-   </div>
    
 </ul>
+</div>
