--- a/src/app/composants/accueil/informatique/materiel/materiel.component.html
+++ b/src/app/composants/accueil/informatique/materiel/materiel.component.html
@@ -15,6 +15,6 @@
      </span>
   </div>
   <div class="card-footer text-muted">
-    <button type="button" class="btn btn-primary">details</button>
+    <button type="button" class="btn btn-primary" [routerLink]="['/informatique', e.id]">details</button>
   </div>
 </div>
